<resources>
    <string name="app_name">Online Hospital Appointment</string>
    <string name="description">Description</string>
    <string name="book">BOOK</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="no_account">Don\'t have Account ?</string>
    <string name="account">You have Account ?</string>
    <string name="illness_description">Enter Illness Description Here...</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

</resources>