<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="registrationActivityCallback"
            type="com.poc.onlinehospitalappointment.listeners.RegistrationActivityCallback" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/salt_pink_color"
        android:scrollbars="none"
        android:padding="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo_img_vw"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/user_icon"
                android:ems="10"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/avenirltstd_medium"
                android:hint="first name"
                android:inputType="text"
                android:padding="@dimen/_7sdp"
                android:textColor="@color/orange_color"
                android:textColorHint="@color/rippile_color"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_img_vw"
                app:tint="@color/orange_color" />

            <EditText
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/user_icon"
                android:ems="10"
                android:fontFamily="@font/avenirltstd_medium"
                android:hint="last name"
                android:inputType="text"
                android:padding="@dimen/_7sdp"
                android:textColor="@color/orange_color"
                android:textColorHint="@color/rippile_color"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fname"
                app:tint="@color/orange_color" />

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/email_icon"
                android:ems="10"
                android:fontFamily="@font/avenirltstd_medium"
                android:hint=" email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_7sdp"
                android:textColor="@color/orange_color"
                android:textColorHint="@color/rippile_color"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lname"
                app:tint="@color/orange_color" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/password_icon"
                android:ems="10"
                android:fontFamily="@font/avenirltstd_medium"
                android:hint="password"
                android:inputType="textPassword"
                android:padding="@dimen/_7sdp"
                android:textColor="@color/orange_color"
                android:textColorHint="@color/rippile_color"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_et"
                app:tint="@color/orange_color" />

            <EditText
                android:id="@+id/confirm_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/password_icon"
                android:ems="10"
                android:fontFamily="@font/avenirltstd_medium"
                android:hint=" confirm password"
                android:inputType="textPassword"
                android:padding="@dimen/_7sdp"
                android:textColor="@color/orange_color"
                android:textColorHint="@color/rippile_color"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_et"
                app:tint="@color/orange_color" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_pw">

                <RadioButton
                    android:id="@+id/male_radioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange_color"
                    android:text="@string/male"
                    android:textSize="@dimen/_12sdp"
                    android:onClick="@{(v) -> registrationActivityCallback.selectOption(v)}"
                    android:fontFamily="@font/avenirltstd_medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <RadioButton
                    android:id="@+id/female_radioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/female"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/orange_color"
                    android:onClick="@{(v) -> registrationActivityCallback.selectOption(v)}"
                    android:fontFamily="@font/avenirltstd_medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/spinner_cl"
                android:layout_width="match_parent"
                app:layout_constraintDimensionRatio="5:1"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/rounded_edittext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group">


                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@color/transparent"
                    android:spinnerMode="dropdown" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/drop_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/SignUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_50sdp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/avenirbold"
                android:gravity="center"
                android:onClick="@{(theView) -> registrationActivityCallback.onRegisterClick(theView)}"
                android:padding="@dimen/_7sdp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_cl"

                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SignUpBtn"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp">

                <TextView
                    android:id="@+id/signup_tv1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:padding="@dimen/_5sdp"
                    android:gravity="center_vertical|right"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:textColor="@color/rippile_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/LoginTV"
                    app:layout_constraintHorizontal_weight="0.60"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/LoginTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textAllCaps="true"
                    android:textColor="@color/orange_color"
                    android:fontFamily="@font/avenirbold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight=".30"
                    app:layout_constraintStart_toEndOf="@+id/signup_tv1"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ProgressBar
                android:id="@+id/loader"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>